@@ -68,6 +68,7 @@
   *  - Fixed incorrect LEDs_ChangeLEDs() function in the Benito board LED driver
   *  - Fixed incorrect USB_DeviceState value when unconfiguring the device without an address set
   *  - Fixed broken FLASH/EEPROM programming in the AVRISP-MKII clone project when writing in non-paged mode and the polling byte cannot be used
+  *  - Fixed broken lock byte programming in the AVRISP-MKII clone project for some XMEGA targets
   *
   *  \section Sec_ChangeLog100807 Version 100807
   *  <b>New:</b>
